# vcpkg_clang

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
cmake/: x64-linux-clang-10.cmake  x64-linux-clang-18.cmake  x64-linux-clang-test.cmake
cmake/x64-linux-clang/: x64-linux-clang.toolchain.cmake
cmake/x64-linux-clang/Platform/: clang-c.cmake  clang-cxx.cmake  clang-override.cmake
